feature/add pdfReport message, service test and update on readme file